2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/26_passer_string_print.deca
// Description :
//     passer string  print   
// Resultats :
//    Valide 
//
// Historique :
// cree le 10/01/2024

{
    print("bonjour");

}