2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/31_gt_str_str.deca
// Description :
//      opération > entre deux strings
// Resultats :
//    Erreur Contexteulle : ligne 10 : l'opération > n'est pas possible entre 'string' et 'string'
//
// Historique :
// cree le 10/01/2024

{
    "bonjour !!" >  "bonjour";
}